# agent-factory

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt
apps/village/: README.md  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo
config/: README.md  apis.yaml  defaults.yaml  pipeline.yaml  storage.yaml  workers.yaml
config/workflows/: coloring.yaml  documentation.yaml  research.yaml
contracts/: README.md  orchestrator.py  queue.py  serializer.py  storage.py  worker.py
deploy/: .dockerignore  Dockerfile  README.md  docker-compose.yml
deploy/env/: .env.example
schema/: README.md  coloring_page.json  doc_completed.json  doc_outline.json  doc_request.json  envelope.json  error.json  image_task.json  reasoning_task.json  request.json  research_findings.json  research_report.json  research_request.json  research_task.json  result.json
scripts/: README.md  cleanup.sh  run.sh  run_pipeline_once.py  run_village.sh
src/: __init__.py  generate_pdf.py
src/config/: README.md  loader.py
src/core/: README.md  coloring_domain.py  coloring_domain_test.py  message.py  message_test.py  prompt_rules.py
src/entrypoints/: README.md  cli.py  village_bridge.py
src/orchestrator/: README.md  error_handler.py  pipeline.py  state_machine.py
src/queue_backends/: README.md  file_queue.py  memory_queue.py  queue_test.py
src/registry/: __init__.py
src/storage/: README.md  local_storage.py
tests/: README.md  conftest.py  test_full_pipeline.py
(+30 files in other folders)
